Issue #52 text doesnt fit on map tabbar on iPhone

--- a/www/source/css/custom.css
+++ b/www/source/css/custom.css
@@ -953,6 +953,11 @@ div.map {
     transition-duration:0.8s;
 }
 
+.map-page .ui-navbar .ui-btn-inner {
+  padding-left: 2px;
+  padding-right: 2px;
+}
+
 /* =============================================================================
    Twitter Feed
    ========================================================================== */
